fix: add gap for class best-gifts__box

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -397,6 +397,7 @@ svg {
     flex-direction: column;
     padding-top: 60px;
     padding-bottom: 60px;
+    gap: 20px;
 }
 
 .best-gifts__titles {
